--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -1,20 +1,21 @@
 - image: brad-neathery-nPy0X4xew60-unsplash.jpg
   desc_location: left
-  desc:
-    <h2>Launch a project and sleep in?</h2>
+  desc: <h2>Launch a project and sleep in?</h2>
     <h2>If you hire the right team.</h2>
     <h3>&nbsp;</h3>
     <button onClick="window.open('https://us1.list-manage.com/survey?u=b7e54324b72126b7ef51b4772&id=d8ce84b999')">Take Our Questionnaire</button>
+- image: slide-2a.jpg
+  desc_location: left
+  desc: <h2>Sign Up For Our Newsletter</h2>
+    <p>Team Mystic's weekly reads is fun and informative</p>
+    <button onClick="window.open=('https://forms.aweber.com/form/20/2651020.htm')">Sign Up</button>
 - image: slide-2.jpg
   desc_location: left
-  desc:
-    <h2>Available For Training &amp; Conferences</h2>
+  desc: <h2>Available For Training &amp; Conferences</h2>
     <p>Our team gives back at conferences worldwide and trains in the latest technology</p>
     <button onClick="location.href='#contactus'">Reach out</button>
 - image: slide-3.jpg
   desc_location: right
-  desc:
-    <h2>New book Beginning Spring 5!</h2>
+  desc: <h2>New book Beginning Spring 5!</h2>
     <h3>Our second book, and we think you'll love it!</h3>
     <button onClick="location.href='https://beginningspring5.com'">Buy It Today</button>
-  
